--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;900&display=swap');
+body {
+    font-family: "Poppins", "Noto Sans JP", sans-serif;
+}
 .all{
     background-color: aliceblue;
 }
